k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entertainment-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-website-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: movie-server-service
                port:
                  number: 5000
